tests/specs/ecosystem/std/io/0_221_0.test
std/io/0.221.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
 */ export function readRange(r: Reader & Deno.Seeker, range: ByteRange): Promise<Uint8Array> {
                                               ~~~~~~
    at file://<tmpdir>/read_range.ts:24:48

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'SeekerSync'.
 */ export function readRangeSync(r: ReaderSync & Deno.SeekerSync, range: ByteRange): Uint8Array {
                                                       ~~~~~~~~~~
    at file://<tmpdir>/read_range.ts:43:56

Found 2 errors.

error: Type checking failed.

